# pkg/handlers/v1/sync.go
@@ -7,6 +7,12 @@ import (
 	"github.com/asecurityteam/ipam-facade/pkg/logs"
 )
 
+// JobMetadata contains the aysnc task ID assigned to the
+// sync request used to check for completion
+type JobMetadata struct {
+	JobID string `json:"jobID"`
+}
+
 // SyncIPAMDataHandler uses its IPAMDataFetcher implementation to serve sync requests
 // for refreshing the local IPAM data from the CMDB data source.
 type SyncIPAMDataHandler struct {
@@ -16,18 +22,22 @@ type SyncIPAMDataHandler struct {
 }
 
 // Handle fetches IPAM data from a CMDB and stores the data locally.
-func (h *SyncIPAMDataHandler) Handle(ctx context.Context) error {
+func (h *SyncIPAMDataHandler) Handle(ctx context.Context, jobMetadata JobMetadata) error {
 	logger := h.LogFn(ctx)
 
 	ipamData, err := h.IPAMDataFetcher.FetchIPAMData(ctx)
 	if err != nil {
-		logger.Error(logs.IPAMDataFetcherFailure{Reason: err.Error()})
+		logger.Error(logs.IPAMDataFetcherFailure{JobID: jobMetadata.JobID, Reason: err.Error()})
 		return err
 	}
 
 	if err := h.PhysicalAssetStorer.StorePhysicalAssets(ctx, ipamData); err != nil {
-		logger.Error(logs.AssetStorerFailure{Reason: err.Error()})
+		logger.Error(logs.AssetStorerFailure{JobID: jobMetadata.JobID, Reason: err.Error()})
 		return err
+	}
+
+	if len(jobMetadata.JobID) > 0 {
+		logger.Info(logs.DataSyncComplete{JobID: jobMetadata.JobID})
 	}
 
 	return nil
